fix(Fixed header structure and alignment issues): Fix header-bottom alignment nesting issues on stylesheet and on index page
On the index page, I restructured it so I can see my closing tabs more better as I spent some time finding a missing </div>  in the 'header-bottom' part.  I aslo added some text to introduce my webpage.  On the stylesheet, I grouped the top and bottom parts of the header and added a picture of a cat also in the bottom part.

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,6 @@ body {
 
 .header {
     background-color: #1f2937;
-    /* display: flex; */
     
 }
 
@@ -16,13 +15,13 @@ body {
     color: #f9faf8;
 }
 
-.header-top {
+.header-top,.header-bottom {
     display: flex;
     justify-content: space-between;
     padding: 8px;
     
 }
-.right,.left {
+.right,.left,.hb-left,.hb-right {
     display: flex;
     align-items: center;
     gap: 16px;
@@ -46,13 +45,12 @@ ul {
     list-style-type: none;
 }
 
-/* .container-h2 { */
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    text-align: center;
-
+/* Bottom part of header: the title,text,button (left) -the picture (right) */
+.hb-left,.hb-right {
+    flex-direction: column;
+    text-align: left;
 }
+
 .title {
     font-size: 48px;
     color: #f9faf8;
@@ -66,7 +64,6 @@ img {
     width: 200px;
     height: 200px;
     border-radius: 1rem;
-
 }
 
 /* body and sections inside it are below */
@@ -133,13 +130,13 @@ img {
     background-color: #3882f6;
     color: white;
     height: 16px;
-    width: 24px;
+    width: 4rem;
     height: 24px;
     padding: 0;
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 8px;
+    border-radius: 1em;
 
 }
 
